--- a/03_Cursos_JavaScript/1_Curso_JavaScript_Udemy/Aula_204-210_Eventos/Aula_209_Eventos_de_foco/style.css
+++ b/03_Cursos_JavaScript/1_Curso_JavaScript_Udemy/Aula_204-210_Eventos/Aula_209_Eventos_de_foco/style.css
@@ -110,3 +110,12 @@ button:hover {
 button:active {
   transform: scale(0.9);
 }
+
+input {
+    height: 40px;
+    width: 400px;
+    border-radius: 20px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 30px;
+    padding: 10px;
+}
